# RGB-Serial-Client

./: CMakeLists.txt  README.md
src/: actions.c  main.c  serial.c  serial.h
